Use software rendering if we cannot use OpenGL and complain about it

Use KQuickAddons::QtQuickSettings to fallback to software rendering if
OpenGL context creation fails. When using software rendering, we display
a message at the top of the window that complains about it.

BUG: 433976